--- a/package.json
+++ b/package.json
@@ -8,12 +8,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^6.2.3",
+    "install": "^0.13.0",
+    "moment": "^2.29.1",
     "next": "12.0.8",
+    "next-themes": "0.0.15",
+    "npm": "^8.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-card-flip": "^1.1.5",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "superagent": "^7.1.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.9",
+    "@types/react": "^17.0.38",
+    "@types/react-syntax-highlighter": "^13.5.2",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.3",
+    "stylelint-config-recommended": "^6.0.0",
+    "tailwindcss": "^3.0.15",
+    "typescript": "^4.5.4"
   }
 }
