--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-card-flip": "^1.1.5",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.2",
+    "react-syntax-highlighter": "^15.5.0",
     "superagent": "^7.1.1"
   },
   "devDependencies": {
